force-app/main/default/objects/Acquisition__c/Acquisition__c.object-meta.xml
<CustomObject>
    <label>Acquisition Source</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Acquisition ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acquisition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>