force-app/main/default/objects/Acquisition__c/fields/AcqMedia__c.field-meta.xml
<CustomField>
    <fullName>AcqMedia__c</fullName>
    <label>Media</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Line Request</fullName>
            </value>
            <value>
                <fullName>3rd Party Forwarded</fullName>
            </value>
            <value>
                <fullName>Magazine Advertisement</fullName>
            </value>
            <value>
                <fullName>Prospect List</fullName>
            </value>
            <value>
                <fullName>Internal Referral</fullName>
            </value>
            <value>
                <fullName>Offered Lowest Published Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>