force-app/main/default/objects/Acquisition__c/fields/AcqSource__c.field-meta.xml
<CustomField>
    <fullName>AcqSource__c</fullName>
    <label>Acquisition Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$1,000 Plus Order</fullName>
            </value>
            <value>
                <fullName>Avalara</fullName>
            </value>
            <value>
                <fullName>Inquiry Form Filled Out</fullName>
            </value>
            <value>
                <fullName>Post Platinum</fullName>
            </value>
            <value>
                <fullName>Purchasing Near Plat</fullName>
            </value>
            <value>
                <fullName>Swarovski</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>