force-app/main/default/objects/Acquisition__c/fields/Date_Added__c.field-meta.xml
<CustomField>
    <fullName>Date_Added__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Added</label>
    <type>DateTime</type>
</CustomField>